--- a/package.json
+++ b/package.json
@@ -10,16 +10,44 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.1",
+    "axios": "^0.19.0",
+    "polished": "^3.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-toastify": "^5.5.0",
+    "redux": "^4.0.5",
+    "reduxsauce": "^1.1.1",
+    "styled-components": "^4.4.1",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^2.0.5",
+    "@types/react-redux": "^7.1.5",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "json-server": "^0.15.1",
+    "prettier": "^1.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "yarn json-server ./data.json -p 3333 -w"
   },
   "eslintConfig": {
     "extends": "react-app"
