--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "reduxsauce": "^1.1.1",
-    "styled-components": "^4.4.1",
-    "typescript": "~3.7.2"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@types/react-input-mask": "^2.0.5",
     "@types/react-redux": "^7.1.5",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "json-server": "^0.15.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
