--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-input-mask": "^2.0.4",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-toastify": "^5.5.0",
-    "redux": "^4.0.5",
-    "reduxsauce": "^1.1.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
@@ -46,6 +43,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "react-scripts test --watchAll",
     "eject": "react-scripts eject",
     "api": "yarn json-server ./data.json -p 3333 -w"
   },
