--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "4.0.1",
     "react-toastify": "^5.5.0",
     "styled-components": "^4.4.1"
   },
@@ -37,13 +37,14 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "json-server": "^0.15.1",
     "prettier": "^1.16.4",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:watch": "react-scripts test --watchAll",
+    "test": "react-scripts test --config=jest.config.ts",
+    "test:watch": "react-scripts test --watchAll --config=jest.config.ts",
     "eject": "react-scripts eject",
     "api": "yarn json-server ./data.json -p 3333 -w"
   },
